chore: support JDK 8